Fix alignment issue for select elements in safari

--- a/public/css/event-rule-config.less
+++ b/public/css/event-rule-config.less
@@ -189,7 +189,7 @@
 
     select, input {
       min-width: 10em;
-      text-align: center;
+      text-align-last: center; // text-align does not work in safari for select tags
       height: 2.25em;
       line-height: normal;
       background: @search-term-bg;
